--- a/package.json
+++ b/package.json
@@ -8,15 +8,30 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "expo": "~40.0.0",
+    "@react-native-community/masked-view": "0.1.10",
+    "@react-native-community/netinfo": "^5.9.9",
+    "@react-navigation/drawer": "^5.11.4",
+    "@react-navigation/material-bottom-tabs": "^5.3.10",
+    "@react-navigation/native": "^5.8.10",
+    "@react-navigation/stack": "^5.12.8",
+    "apisauce": "^2.0.0",
+    "expo": "^40.0.0",
     "expo-status-bar": "~1.0.3",
-    "react": "16.13.1",
-    "react-dom": "16.13.1",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
-    "react-native-web": "~0.13.12"
+    "firebase": "^8.2.1",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "react-native": "^0.63.4",
+    "react-native-elements": "^3.0.0-alpha.1",
+    "react-native-gesture-handler": "^1.9.0",
+    "react-native-paper": "^4.5.0",
+    "react-native-reanimated": "~1.13.0",
+    "react-native-safe-area-context": "3.1.9",
+    "react-native-screens": "^2.16.1",
+    "react-native-web": "^0.14.10",
+    "expo-image-picker": "~9.2.0"
   },
   "devDependencies": {
-    "@babel/core": "~7.9.0"
+    "@babel/core": "^7.12.10"
   },
   "private": true
 }
